<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_turquoise">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_project_trojan"
        android:layout_marginTop="16dp"
        android:layout_marginStart="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/trailer"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/trailer_placeholder"
        android:layout_width="900dp"
        android:layout_height="200dp"
        android:contentDescription="@string/trailer"
        android:src="@drawable/video_trailer_placeholder"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
    android:text="@string/age_rating"
    android:textColor="@color/white"
    android:layout_below="@id/trailer_placeholder"
    android:layout_alignStart="@id/trailer_placeholder"
    android:layout_marginTop="-40dp"
    android:layout_marginStart="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:text="@string/release_date"
        android:layout_marginTop="260dp"
        android:layout_marginStart="160dp"
        android:textColor="@color/white"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="303dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/description" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
  android:layout_marginStart="37dp"
        android:layout_marginTop="428dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/genre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="287dp"
        android:layout_marginTop="428dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/platform" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="344dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/description_text"
        android:layout_marginStart="70dp"
        android:id="@+id/description_text" />


    <Button
        android:id="@+id/buttonRight"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:text="@string/pre_order_now"
        android:background="@drawable/rounded_button"
        android:layout_below="@id/description_text"
        android:contentDescription="@string/pre_order_now" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/gameplay_visuals"
        android:layout_marginStart="90dp"
        android:id="@+id/gameplay_visuals_title" />

    <ImageView
        android:id="@+id/gameplay_screenshot"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:contentDescription="@string/gameplay_visuals"
        android:src="@drawable/tech_facility_homepage1"
        android:layout_marginTop="600dp"
         android:layout_marginStart="20dp" />

    <ImageView
        android:id="@+id/gameplay_screenshot2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:contentDescription="@string/gameplay_visuals"
        android:src="@drawable/tech_facility_homepage3"
        android:layout_marginTop="600dp"
        android:layout_marginStart="204dp" />

    <ImageView
        android:id="@+id/gameplay_screenshot3"
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:contentDescription="@string/gameplay_visuals"
        android:src="@drawable/tech_facility_homepage5"
        android:layout_marginTop="715dp"
        android:layout_marginStart="-28dp" />

    <ImageView
        android:id="@+id/gameplay_screenshot4"
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="715dp"
        android:contentDescription="@string/gameplay_visuals"
        android:src="@drawable/tech_facility_homepage6" />

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentBottom="true"
        android:background="#1E1E1E" />

    <ImageView
        android:id="@+id/logo_footer"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_project_trojan"
        android:layout_marginTop="840dp"
        android:layout_marginStart="0dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:contentDescription="@string/contact_us"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:layout_marginStart="85dp"
        android:layout_marginTop="840dp"
        android:textStyle="bold"
        android:textColor="@color/dark_turquoise"/>

    <ImageView
        android:id="@+id/email_icon"
        android:contentDescription="@string/email"
        android:src="@drawable/email_icon"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="865dp"
        android:layout_marginStart="50dp"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/email"
    android:layout_marginStart="115dp"
    android:layout_marginTop="870dp"
    android:textColor="@color/dark_turquoise"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="904dp"
        android:textSize="11sp"
        android:textColor="@color/white"
        android:text="@string/footer_item1"
        android:layout_marginStart="90dp"
        android:id="@+id/footer_item1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textColor="@color/white"
        android:text="@string/footer_item2"
        android:layout_marginStart="90dp"
        android:id="@+id/footer_item2"

        android:layout_below="@id/footer_item1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textColor="@color/white"
        android:text="@string/footer_item3"
        android:layout_marginStart="90dp"
        android:id="@+id/footer_item3"

        android:layout_below="@id/footer_item2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textColor="@color/white"
        android:text="@string/footer_item4"
        android:layout_marginStart="90dp"
        android:id="@+id/footer_items"

        android:layout_below="@id/footer_item3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:layout_marginStart="3dp"
        android:layout_marginTop="978dp"
        android:textColor="@color/white"
        android:textSize="11sp" />

</RelativeLayout>

</ScrollView>